# useful-notebooks

./: README.md  pyproject.toml
AiidaPostProcess/: GetSpinDensityFromGeoOpt.ipynb  NscfEigenvalues.ipynb  RetrieveSpinGuess.ipynb
ChargeAnalysis/: ChargeTransfer.ipynb  PopulationAnalysis.ipynb
CubeFiles/: ChargeAverage.ipynb  CubeDirectionalAnalysis.ipynb
useful_notebooks_cube/: README.md  __init__.py  analysis.py  constants.py  io.py  multicube.py  plotting.py  utils.py
